--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic);
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,300);
-@import url(http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css);
-@import url(http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css);   
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,300);
+@import url(https://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css);
+@import url(https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.min.css);   
 
 
-@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono);      
-@import url(http://fonts.googleapis.com/css?family=Chewy);                    
+@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono);      
+@import url(https://fonts.googleapis.com/css?family=Chewy);                    
 
 /*!
  *  Simple - Minimal, responsive resume
